# unbrowser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: probabilistic-policy.md  roadmap.md
prefit/: v1.bundle.json
profiles/: chrome_131.toml  chrome_134.toml
python/: README.md  pyproject.toml
python/unbrowse/: __init__.py
python/unbrowser/: __init__.py
scripts/: _before_after_compare.py  bytecode_cache_smoke.py  fp_check.py  module_loader_smoke.py  network_stores_smoke.py  observers_smoke.py  policy_baseline.json  policy_baseline.py  policy_e2e.json  policy_e2e.py  prefit_smoke.py  router.py  settle_reason_smoke.py  unbrowse.py  watch.py
skills/unbrowser/: SKILL.md
src/: bytecode_cache.rs  challenge.rs  main.rs  network_store.rs  policy.rs  prefit.rs  profile.rs
src/js/: blockmap.js  dom.js  extract.js  interact.js  shims.js
train/: .gitignore  README.md  aggregate.py  collect.py  corpus_v1.txt  pack.py  test_collect.py
train/corpus/: seed_sites.json
