[package]
name = "unchained_browser"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
cookie = "0.18"
cookie_store = "0.21"
html5ever = "=0.38.0"
http = "1"
markup5ever_rcdom = "=0.38.0"
rquickjs = { version = "0.11" }
rquest = { version = "5", features = ["cookies"] }
rquest-util = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
